--- a/index.html
+++ b/index.html
@@ -97,21 +97,17 @@
 	<div class="main">
 		<div class="main-text">
 			<div class="main-text-center">
-			<h1>Experience Designer & UI Engineer</h1>
-			<br>
+			<h1>Product Designer & Design Technologist</h1>
 			<p class="project-desc">
-				I’m an experienced and passionate UX/UI/Product Designer with over 8+ years of experience researching, ideating, 
-				and building digital products. Over the years I’ve had the opportunity to work on several great products reflecting 
-				a variety of domains. From enterprise insurance applications to internally facing cybersecurity apps, I’ve worked on a 
-				variety of dynamic products in agile or lean teams and environments. I leverage my engineering skills and understanding 
-				of JavaScript and popular libraries and frameworks like React, to build live/interactive prototypes and collaborate 
-				with development/engineering teams to design functionality and problem solve issues.
+				I’m an experienced and passionate Product Designer and Design Technologist with over 8+ years of experience researching, ideating, 
+				and building digital products that achieve short and long-term business goals by collaborating with stakeholders to build/gather 
+				requirements and more. Over the years I’ve had the opportunity to work on several great products reflecting a variety of domains. 
+				From enterprise insurance applications to internally facing cybersecurity apps, I’ve worked on a variety of dynamic products in 
+				agile and lean teams/environments. I leverage my engineering skills and understanding of JavaScript and popular libraries and 
+				frameworks like React, to build live/interactive prototypes and collaborate with development/engineering teams to design 
+				functionality and problem solve issues.
 
-				<br>
-				<br>
-				I believe soft skills are important, as such I strive to be an effective problem solver and clear communicator. 
-				I’m a team player with a positive attitude and focus.
-	
+		
 			</p>
 		</div>
 	</div>
