--- a/elearn-app.html
+++ b/elearn-app.html
@@ -96,6 +96,7 @@
                      <span class="role">UI Design</span>
                      <span class="role">Lean UX</span>
                      <span class="role">Data Visualizaion</span>
+                     <span class="role">Git</span>
                   </div>
                </div>
             </div>
