--- a/insurance-app.html
+++ b/insurance-app.html
@@ -94,6 +94,7 @@
                      <span class="role">Information Architecture</span>
                      <span class="role">UI Design</span>
                      <span class="role">Prototyping</span>
+					 <span class="role">Git</span>
                   </div>
                </div>
             </div>
@@ -197,11 +198,11 @@
                         <br>
                         <br>
                         The project didn’t have a large UI development team, and as such, I was able to leverage my skills to support and collaborate with 
-                        the UI developers in reaching development and production targets.
+                        the UI developers in reaching development and production targets. My contrubutions included building a scalable UI component library 
+						using React, HTML, CSS, and more.
                         <br>
                         <br>
-                        Accessibility played a major role in our design process. In development, we used WAVE One of the key goals was to build a scalable UI 
-                        component library using React and other tools. On the Front-end, we used the following tools, libraries and technologies:
+                        Accessibility played a major role in our design process and in development we used WAVE to evaluate our output. 
                      </p>
                      <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:717cc642-3d89-4a79-8741-49910881dae7" target="_blank" class="view-btn">View Project</a>
