--- a/network-app.html
+++ b/network-app.html
@@ -94,6 +94,7 @@
                      <span class="role">Information Architecture</span>
                      <span class="role">UI Design</span>
                      <span class="role">Prototyping</span>
+					 <span class="role">Git</span>
                   </div>
                </div>
             </div>
