--- a/remit-app.html
+++ b/remit-app.html
@@ -90,6 +90,7 @@
                      <span class="role">UI Design</span>
                      <span class="role">Prototyping</span>
                      <span class="role">Mobile Design</span>
+					 <span class="role">Git</span>
                   </div>
                </div>
             </div>
